NOT COMMITTED YET (OR EXPERIMENTAL):
====================================

Emacs-mode:

Shell-script: 

LaTeX macros:

Installation/Documentation:

SINCE LAST RELEASE:
===================

Emacs-mode:

 * added detexification so that whizzy-goto-line works in latin mode. 
 * whizzy-goto-line takes surounded words into accoun for better precision
 * renamed -fmt into -format and added -fmt for format extension
 * changed whizzy-setup-manager to give priority to buffer information
 * added a pessimistic version of whizzy-show-point and menu entries
 * made it work with all file extensions but those internally used
 * added slower slice saving option for x-symbol compatibility.
 * fixed whizzy-suppend
 * added whole (document error) in line-mode string.
 * complete rewrite of whizzy-show-position 
 * fixed write-file-config.
 * added -initex and -latex to set INITEX and LATEX
 * fixed overlays of errors.
 * temptative fix of whizzy-write-slice to work with X-symbols mode.
 * added whizzy-key-bindings with two default values for latex or auctex

Shell-script: 

 * renamed FMT into FORMAT and added FMT for format extension.
 * change newslice detection (does not watch other file but the slice)
 * alternative when grep does not recognize -B
 * made it work with all file extensions but those internally used
 * refresh the duplex window if any when full document has been recompiled
 * added checkconfig script
 * added BASH configuration 
 * added INITEX, LATEX, and LATEXFMT variables to enable platex
 * renamed filename.wiz into filename.waux (not deleted on exit).
 * rename .dview extension into .wdvi and filename.wdvi is deleted on exit.
 * renamed auxiliary filename.fmt into _whizzy_filename.fmt (deleted on exit).
 * Fix a typo in read of commands (duplex reformat were not understood)

LaTeX macros:

 * made it work with all file extensions but those internally used
 * fixed a bug in use of \everydisplay
 * renamed filename.wiz into filename.waux
