@@ -58,7 +58,7 @@ The major release version is
 
 <br>
 The <a href="VERSION">current stable version</a> is
-<a href="whizzytex-1.00iv.tgz">whizzytex-1.00iv.tgz</a>
+<a href="whizzytex-1.00v.tgz">whizzytex-1.00v.tgz</a>
 (see <a href="CHANGES">CHANGES</a>).
 
 <br><br><em>
